v2-dev (20191114)
* Added "Thanks" section to README.md
* Added CHANGES file

v1 (20191113)
* Initial release